fix order on mobile

--- a/styles/Nelson.module.css
+++ b/styles/Nelson.module.css
@@ -84,7 +84,7 @@
       font-size: 1rem;
       display: block;
       width: 100%; 
-      grid-row: 9 / 10;
+      grid-row: 9 / 12;
     }
     .i_name {
       
@@ -120,7 +120,7 @@
       width: 100%;
   }
   .i_order {
-    grid-row: 10 / 15;
+    grid-row: 12 / 15;
       border: none;
       background-color: #54b3d6;
       display: block;
